Calculating List of possible Combinations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "abs.h": "c",
-        "satstore.h": "c"
+        "satstore.h": "c",
+        "string_view": "c"
     }
 }
