--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "abs.h": "c",
         "satstore.h": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "bitset": "c",
+        "chrono": "c",
+        "algorithm": "c"
     }
 }
